# opendogv2_description

./: CMakeLists.txt  README.md  package.xml
config/: model_view.rviz
launch/: description.launch  view.launch
meshes/: body.stl  hip1.stl  hip2.stl  lowerleg1.stl  lowerleg2.stl  upperleg1.stl  upperleg2.stl
urdf/: collision.xacro  inertias.xacro  opendogv2.urdf.xacro  opendogv2_description.urdf
